<resources>
    <string name="app_name">Fitness Studio</string>
    <string name="action_trainers">Trainers</string>
    <string name="action_clubs">Clubs</string>
    <string name="action_about_us">About us</string>
    <string name="action_login">Log in</string>
    <string name="action_booking">Booking</string>
    <string name="action_shop">Shop</string>
    <string name="about_title">Hit us up</string>
    <string name="about_description">
        Don\’t be shy. We’d love to hear from you and how we can enhance your 1R experience
        even further. Choose from the options below and we\'ll do our best to help.
        Feel free to also drop by the studios and chat with our team (gifts accepted).
    </string>

    <string name="sign_in">Sign in</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up_offer">Don\'t have an account?</string>
    <string name="sign_in_offer">Already have an account?</string>
    <string name="register">Register</string>
    <string name="sign_out">Sign out</string>

    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="agreeing">I agree to <u>The Terms &amp; Condition</u></string>
    <string name="error_msg_first_name">Please enter first name</string>
    <string name="error_msg_last_name">Please enter last name</string>
    <string name="error_msg_email">Please enter email</string>
    <string name="error_msg_password">Please enter password</string>
    <string name="error_msg_confirm_password">Please enter confirm password</string>
    <string name="error_msg_mismatch_passwords">Password and confirm password does not match</string>
    <string name="error_msg_agree_terms_condition">Please agree Terms and Condition</string>
    <string name="register_successful">Successful! Thanks for registering!</string>
    <string name="sign_in_successful">Welcome Back!</string>
    <string name="user_id">User ID ::</string>
    <string name="email_id">Email ID ::</string>

    <string name="please_wait">Please wait...</string>
    <string name="forgot_password_description">We\'ll send you an email to reset your password</string>

    <string name="button_submit">SUBMIT</string>
    <string name="reset_password_successfully">Check your email</string>
    <string name="error_registration">Error while registration the user</string>
</resources>