<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".MainActivity">
        <item
            android:id="@+id/action_about_us"
            android:orderInCategory="100"
            android:title="@string/action_about_us"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_trainers"
            android:orderInCategory="100"
            android:title="@string/action_trainers"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_clubs"
            android:orderInCategory="100"
            android:title="@string/action_clubs"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_shop"
            android:orderInCategory="100"
            android:title="@string/action_shop"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_login"
            android:orderInCategory="100"
            android:title="@string/action_login"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_booking"
            android:orderInCategory="100"
            android:title="@string/action_booking"
            app:showAsAction="never"/>
</menu>