<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <ImageView
        android:id="@+id/headerImage"
        android:layout_width="0dp"
        android:layout_height="@dimen/auth_header_image_height"
        android:scaleType="centerCrop"
        android:contentDescription="@string/sign_in"
        android:layout_marginBottom="10dp"
        android:src="@mipmap/auth_screens_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.rudimentum.fitnessstudio.ui.BoldTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="@dimen/forgot_password_title_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerImage"/>

    <com.rudimentum.fitnessstudio.ui.LightTextView
        android:id="@+id/titleDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:text="@string/forgot_password_description"
        android:textColor="@color/black"
        android:textSize="@dimen/forgot_password_description_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputForgotPasswordEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/enter_email"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleDescription">

        <com.rudimentum.fitnessstudio.ui.OswaldEditText
            android:id="@+id/etForgotPasswordEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textPersonName"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.rudimentum.fitnessstudio.ui.OswaldButton
        android:id="@+id/btnResetPassword"
        android:background="@drawable/button_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:foreground="?attr/selectableItemBackground"
        android:padding="@dimen/btn_padding"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/btn_text_size"
        android:text="@string/button_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputForgotPasswordEmail" />


</androidx.constraintlayout.widget.ConstraintLayout>